syntax = "proto3";

option csharp_namespace = "GrpcServer.Protos";
import "Protos/shared.proto";



service FormTemplateNames {
  rpc GetTemplateNames(TemplatesRequest) returns (TemplatesResponse) {}
  rpc GetForm(FormRequest) returns (stream FormResponse) {}
  rpc DeleteTemplate(FormRequest) returns (ServiceStatus) {}
}

message TemplatesResponse{
	repeated TemplateName TemplateNames = 1;
}

message TemplateName{
	string FormTemplateName = 1;
	string FormTemplateExtension = 2;
}


message TemplatesRequest{}

message FormRequest{
	string TemplateName =1;
}

message FormResponse{
	oneof response{
		ServiceStatus status = 1;
		bytes FormBytes = 2;
	}
}